base compare logics

--- a/index.html
+++ b/index.html
@@ -4,50 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Move2Web</title>
-    <style>
-      .fl-row {
-        margin-block-start: 1em;
-        margin-block-end: 1em;
-        display: flex;
-        align-items: center;
-      }
-      .fl-row.around {
-        justify-content: space-around;
-      }
-      .fl-row.stretch {
-        justify-content: stretch;
-      }
-      .fl-row.stretch > input {
-        margin-left: 1rem;
-        flex: 1 1 90%;
-      }
-    </style>
     <script src="parser.js" async></script>
     <script src="script.js" defer></script>
   </head>
   <body>
     <noscript>Please Enable Javascript</noscript>
-    <div class="fl-row stretch">
-      <label for="host-input">TallyHost:</label>
-      <input id="host-input" type="url" value="http://localhost:9000" />
-    </div>
-    <form id="import-form">
-      <fieldset class="fl-row around">
-        <select name="imptype" required>
-          <option value="masters">Masters Import</option>
-          <option value="vouchers">Vouchers Import</option>
-        </select>
-        <input name="csvfile" type="file" accept="text/csv" required />
-        <button id="import-submit">Import</button>
-      </fieldset>
-    </form>
-    <form id="concat-form">
-      <fieldset class="fl-row around">
-        <input name="csvfile" type="file" accept="text/csv" required />
-        <button>Convert</button>
-        <a id="concat-link">Download</a>
-      </fieldset>
-    </form>
+    <main class="fl-main">
+      <section class="fl-col">
+        <div class="fl-row stretch">
+          <label for="host-input">TallyHost:</label>
+          <input id="host-input" type="url" value="http://localhost:9000" />
+        </div>
+        <form id="import-form">
+          <fieldset class="fl-row around">
+            <select name="imptype" required>
+              <option value="masters">Masters Import</option>
+              <option value="vouchers">Vouchers Import</option>
+            </select>
+            <input name="csvfile" type="file" accept="text/csv" required />
+            <button id="import-submit">Import</button>
+          </fieldset>
+        </form>
+        <form id="concat-form">
+          <fieldset class="fl-row around">
+            <input name="csvfile" type="file" accept="text/csv" required />
+            <button>Convert</button>
+            <a id="concat-link">Download</a>
+          </fieldset>
+        </form>
+        <form id="verify-form">
+          <fieldset class="fl-row around">
+            <label>
+              Vouchers:
+              <input name="csvvoucher" type="file" accept="text/csv" required />
+            </label>
+            <label>
+              TallyMasters:
+              <input name="csvmaster" type="file" accept="text/csv" required />
+            </label>
+            <button>Check</button>
+          </fieldset>
+        </form>
+        <div id="verify-op"></div>
+      </section>
+      <ul class="lnks">
+        <li>
+          <a class="as-link" href="/masters.csv" download="masters.csv" target="_blank" rel="noopener noreferrer"
+            >Download Masters</a
+          >
+        </li>
+        <li>
+          <a class="as-link" href="/vouchers.csv" download="vouchers.csv" target="_blank" rel="noopener noreferrer"
+            >Download Vouchers</a
+          >
+        </li>
+        <li>
+          <a class="as-link" href="/concat.csv" download="concat.csv" target="_blank" rel="noopener noreferrer"
+            >Download Concat</a
+          >
+        </li>
+        <li>
+          <a
+            class="as-link"
+            href="/tallymasters.csv"
+            download="tallymasters.csv"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Download TallyMasters</a
+          >
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
