--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/tally-xml-http-auto/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
@@ -52,24 +51,24 @@
       </section>
       <ul class="lnks">
         <li>
-          <a class="as-link" href="/masters.csv" download="masters.csv" target="_blank" rel="noopener noreferrer"
+          <a class="as-link" href="masters.csv" download="masters.csv" target="_blank" rel="noopener noreferrer"
             >Download Masters</a
           >
         </li>
         <li>
-          <a class="as-link" href="/vouchers.csv" download="vouchers.csv" target="_blank" rel="noopener noreferrer"
+          <a class="as-link" href="vouchers.csv" download="vouchers.csv" target="_blank" rel="noopener noreferrer"
             >Download Vouchers</a
           >
         </li>
         <li>
-          <a class="as-link" href="/concat.csv" download="concat.csv" target="_blank" rel="noopener noreferrer"
+          <a class="as-link" href="concat.csv" download="concat.csv" target="_blank" rel="noopener noreferrer"
             >Download Concat</a
           >
         </li>
         <li>
           <a
             class="as-link"
-            href="/tallymasters.csv"
+            href="tallymasters.csv"
             download="tallymasters.csv"
             target="_blank"
             rel="noopener noreferrer"
